--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="ru">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="css/style.css">
         <title>Главная страница</title>
     </head>
 
@@ -66,3 +66,4 @@
     </body>
 
   
+
